--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -15,8 +15,7 @@ jobs:
     steps:
       - uses: google-github-actions/release-please-action@db8f2c60ee802b3748b512940dde88eabd7b7e01 # v3
         with:
-          release-type: node
-          changelog-notes-type: github
-          package-name: release-please-action
-          bump-patch-for-minor-pre-major: true
+          release-type: python
+          package-name: 'setup.py'
+          command: 'python'
           token: ${{ secrets.RELEASE_PLEASE_TOKEN }}
