chore: Add "setup.py" to extra files for release-please workflow

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -19,4 +19,5 @@ jobs:
           changelog-notes-type: github
           package-name: release-please-action
           bump-patch-for-minor-pre-major: true
+          extra-files: "setup.py"
           token: ${{ secrets.RELEASE_PLEASE_TOKEN }}
