--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,12 @@ pdf2docx = "*"
 unstructured = {extras = ["pdf"], version = "*"}
 langchain = "*"
 langchain-community = "*"
+llama-index = "*"
+pytesseract = "*"
+poppler-utils = "*"
+markdownify = "*"
+langchain-openai = "*"
+langchain-core = "*"
 
 [dev-packages]
 ipykernel = "*"
