add : diff agent class

--- a/Pipfile
+++ b/Pipfile
@@ -20,6 +20,8 @@ markdownify = "*"
 langchain-openai = "*"
 langchain-core = "*"
 uvloop = "*"
+scikit-learn = "*"
+seaborn = "*"
 
 [dev-packages]
 ipykernel = "*"
