--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,10 @@ megaparse.egg-info/
 build/*
 ENV 
 venv
+*/cdp/*
+*/evaluations/*
+*.pkl
 
 !megaparse/tests/output_tests/MegaFake_report.md
+megaparse/cdp/CDP_QUAL_CHART_01_CHARTE PRODUITS_2023.12.13.pdf
+*.pkl
