--- a/megaparse/requirements.txt
+++ b/megaparse/requirements.txt
@@ -56,6 +56,7 @@ langchain==0.2.1; python_version < '4.0' and python_full_version >= '3.8.1'
 langchain-community==0.2.1; python_version < '4.0' and python_full_version >= '3.8.1'
 langchain-core==0.2.3; python_version < '4.0' and python_full_version >= '3.8.1'
 langchain-openai==0.1.8; python_version < '4.0' and python_full_version >= '3.8.1'
+langchain-anthropic==0.1.15 ; python_version < '4.0' and python_full_version >= '3.8.1'
 langchain-text-splitters==0.2.0; python_version < '4.0' and python_full_version >= '3.8.1'
 langdetect==1.0.9
 langsmith==0.1.67; python_version < '4.0' and python_full_version >= '3.8.1'
