--- a/release-please-config.json
+++ b/release-please-config.json
@@ -2,6 +2,7 @@
     "packages": {
         "megaparse": {
             "release-type": "python",
+            "package-name": "megaparse",
             "bump-patch-for-minor-pre-major": true,
             "changelog-notes-type": "github",
             "include-v-in-tag": true
