--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,115 +1,57 @@
-[tool.poetry]
+[project]
 name = "megaparse"
 version = "0.0.24"
 description = "Parse complex files (PDF,Docx,PPTX) for LLM consumption"
-authors = ["Quivr"]
-license = "Apache 2.0"
+authors = [
+    { name = "Stan Girard", email = "stan@quivr.app" },
+    { name = "Chloé Daems", email = "chloe@quivr.app" }
+]
 readme = "README.md"
-
-[tool.poetry.dependencies]
-python = "^3.11,<3.13"
-python-docx = "^1.1.2"
-mammoth = "^1.8.0"
-python-pptx = "^0.6.23"
-llama-parse = "^0.4.9"
-pdf2docx = "^0.5.8"
-unstructured = { version = "^0.15.0", extras = ["pdf"] }
-langchain = "^0.2.11"
-langchain-community = "^0.2.10"
-langchain-openai = "^0.1.17"
-langchain-core = "^0.2.23"
-python-dotenv = "^1.0.1"
-torch = [
-    { version = "2.3.1", source = "pypi", platform = "darwin" },
-    { version = "2.3.1", source = "pypi", platform = "linux", markers = "platform_machine != 'x86_64'" },
-    { version = "2.3.1+cpu", source = "pytorch-cpu-src", platform = "linux", markers = "platform_machine == 'x86_64'" },
-    { version = "2.3.1+cpu", source = "pytorch-cpu-src", platform = "win32" },
+dependencies = [
+    "python-docx>=1.1.2",
+    "mammoth>=1.8.0",
+    "python-pptx>=1.0.2",
+    "llama-parse>=0.4.9",
+    "pdf2docx>=0.5.8",
+    "unstructured[pdf]==0.15.0",
+    "langchain>=0.2.14",
+    "langchain-community>=0.2.12",
+    "langchain-openai>=0.1.21",
+    "langchain-core>=0.2.32",
+    "python-dotenv>=1.0.1",
+    "torch>=2.4.0",
+    "torchvision>=0.19.0",
+    "setuptools>=72.2.0",
+    "wheel>=0.44.0",
+    "pycryptodome>=3.20.0",
+    "llama-index>=0.10.65",
 ]
-torchvision = [
-    { version = "0.18.1", source = "pypi", platform = "darwin" },
-    { version = "0.18.1", source = "pypi", platform = "linux", markers = "platform_machine != 'x86_64'" },
-    { version = "0.18.1+cpu", source = "pytorch-cpu-src", platform = "linux", markers = "platform_machine == 'x86_64'" },
-    { version = "0.18.1+cpu", source = "pytorch-cpu-src", platform = "win32" },
-]
+python = "^3.11"
 
-[[tool.poetry.source]]
-name = "pytorch-cpu-src"
-url = "https://download.pytorch.org/whl/cpu"
-priority = "explicit"
-
-[tool.poetry.group.dev]
-optional = true
-
-[tool.poetry.group.dev.dependencies]
-mypy = "^1.10.0"
-pre-commit = "^3.7.1"
-ipykernel = "*"
-ruff = "^0.4.8"
-flake8 = "*"
-flake8-black = "*"
-
-[tool.poetry.group.test]
-optional = true
-
-[tool.poetry.group.test.dependencies]
-pytest-asyncio = "^0.23.7"
-pytest = "^8.2.2"
-pytest-xdist = "^3.6.1"
-pytest-cov = "^5.0.0"
-
-
-[tool.mypy]
-disallow_untyped_defs = true
-# Remove venv skip when integrated with pre-commit
-exclude = ["_static", "build", "examples", "notebooks", "venv", ".venv"]
-ignore_missing_imports = true
-python_version = "3.11"
-
-[tool.ruff]
-line-length = 88
-exclude = [".git", "__pycache__", ".mypy_cache", ".pytest_cache"]
-
-[tool.ruff.lint]
-select = [
-    "E", # pycodestyle errors
-    "W", # pycodestyle warnings
-    "F", # pyflakes
-    "I", # isort
-    "C", # flake8-comprehensions
-    "B", # flake8-bugbear
-]
-ignore = [
-    "B904",
-    "B006",
-    "E501", # line too long, handled by black
-    "B008", # do not perform function calls in argument defaults
-    "C901", # too complex
-]
-
-
-[tool.ruff.lint.isort]
-order-by-type = true
-relative-imports-order = "closest-to-furthest"
-extra-standard-library = ["typing"]
-section-order = [
-    "future",
-    "standard-library",
-    "third-party",
-    "first-party",
-    "local-folder",
-]
-known-first-party = []
-
-[tool.pytest.ini_options]
-addopts = "--tb=short -ra -v"
-filterwarnings = ["ignore::DeprecationWarning"]
-markers = [
-    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
-    "base: these tests require quivr-core with extra `base` to be installed",
-    "tika: these tests require a tika server to be running",
-    "unstructured: these tests require `unstructured` dependency",
-]
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.rye]
+managed = true
+universal = true
+dev-dependencies = [
+    "mypy>=1.11.1",
+    "pre-commit>=3.8.0",
+    "ipykernel>=6.29.5",
+    "ruff>=0.6.0",
+    "flake8>=7.1.1",
+    "flake8-black>=0.3.6",
+    "pytest-asyncio>=0.23.8",
+    "pytest>=8.3.2",
+    "pytest-xdist>=3.6.1",
+    "pytest-cov>=5.0.0",
+]
+
+[tool.hatch.metadata]
+allow-direct-references = true
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/megaparse"]
+
