--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ dependencies = [
     "python-pptx>=1.0.2",
     "llama-parse>=0.4.9",
     "pdf2docx>=0.5.8",
-    "unstructured[pdf]==0.15.0",
+    "unstructured[pdf]>=0.15.0",
     "langchain>=0.2.14",
     "langchain-community>=0.2.12",
     "langchain-openai>=0.1.21",
