fix(building): version not working

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,5 +52,5 @@ dev-dependencies = [
 allow-direct-references = true
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/megaparse"]
+packages = ["megaparse"]
 
