--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,15 +19,19 @@ dependencies = [
     "langchain-openai>=0.1.0",
     "langchain-core>=0.2.0",
     "python-dotenv>=1.0.0",
-    "torch==2.4.0+cpu; sys_platform != 'darwin'",  # For Linux
-    "torch==2.4.0; sys_platform == 'darwin'",  # For macOS
-    "torchvision==0.19.0+cpu; sys_platform != 'darwin'",  # For Linux
-    "torchvision==0.19.0; sys_platform == 'darwin'",  # For macOS
     "pycryptodome>=3.20.0",
     "llama-index>=0.10.0",
     "pdfplumber>=0.11.0",
 ]
 python = "^3.11"
+
+[project.optional-dependencies]
+cpu = [
+    "torch==2.4.0+cpu; sys_platform != 'darwin'",  # For Linux
+    "torch==2.4.0; sys_platform == 'darwin'",  # For macOS
+    "torchvision==0.19.0+cpu; sys_platform != 'darwin'",  # For Linux
+    "torchvision==0.19.0; sys_platform == 'darwin'",  # For macOS
+]
 
 
 [build-system]
