--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,15 +13,23 @@ dependencies = [
     "python-pptx>=1.0.2",
     "llama-parse>=0.4.0",
     "pdf2docx>=0.5.0",
-    "unstructured[pdf]>=0.15.0",
+    "unstructured[all-docs]>=0.15.0",
     "langchain>=0.2.0",
     "langchain-community>=0.2.0",
     "langchain-openai>=0.1.0",
     "langchain-core>=0.2.0",
     "python-dotenv>=1.0.0",
-    "pycryptodome>=3.20.0",
+    "pycryptodome>=3.21.0",
     "llama-index>=0.10.0",
     "pdfplumber>=0.11.0",
+    "fastapi>=0.115.2",
+    "uvicorn>=0.32.0",
+    "ratelimit>=2.2.1",
+    "requests>=2.32.3",
+    "backoff>=2.2.1",
+    "pypdf>=5.0.1",
+    "psutil>=6.1.0",
+    "numpy<=2.0.0",
 ]
 python = "^3.11"
 
