feat(api): Add endpoint for URL upload
This commit adds a new endpoint `/url` to the API that allows users to upload a URL and retrieve the extracted content from the webpage. The endpoint uses the `PlaywrightURLLoader` from the `langchain_community.document_loaders` module to load the webpage and extract the content. The extracted content is then returned as a response.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     "pypdf>=5.0.1",
     "psutil>=6.1.0",
     "numpy<=2.0.0",
+    "playwright>=1.47.0",
 ]
 requires-python = ">= 3.11"
 
