chore: Update ECS service name in build-and-deploy workflow

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -7,7 +7,7 @@ on:
 env:
   AWS_REGION: eu-west-1                 # set this to your preferred AWS region, e.g. us-west-1
   ECR_REPOSITORY: c2l8c5w6/megaparse   # set this to your Amazon ECR repository name
-  ECS_SERVICE: megaparse                # set this to your Amazon ECS service name
+  ECS_SERVICE: megaparse-service                # set this to your Amazon ECS service name
   ECS_CLUSTER: megaparse                 # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: .aws/task_definition.json # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
