--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = [
     { name = "Stan Girard", email = "stan@quivr.app" },
     { name = "Chloé Daems", email = "chloe@quivr.app" }
 ]
+
 readme = "README.md"
 dependencies = [
     "python-docx>=1.1.0",
@@ -13,17 +14,28 @@ dependencies = [
     "python-pptx>=1.0.2",
     "llama-parse>=0.4.0",
     "pdf2docx>=0.5.0",
-    "unstructured[pdf]>=0.15.0",
+    "unstructured[all-docs]>=0.15.0",
     "langchain>=0.2.0",
     "langchain-community>=0.2.0",
     "langchain-openai>=0.1.0",
     "langchain-core>=0.2.0",
     "python-dotenv>=1.0.0",
-    "pycryptodome>=3.20.0",
+    "pycryptodome>=3.21.0",
     "llama-index>=0.10.0",
     "pdfplumber>=0.11.0",
+    "fastapi>=0.115.2",
+    "uvicorn>=0.32.0",
+    "ratelimit>=2.2.1",
+    "requests>=2.32.3",
+    "backoff>=2.2.1",
+    "pypdf>=5.0.1",
+    "psutil>=6.1.0",
+    "numpy<=2.0.0",
+    "playwright>=1.47.0",
+    "langchain-anthropic>=0.2.3",
+    "python-magic>=0.4.27",
 ]
-python = "^3.11"
+requires-python = ">= 3.11"
 
 
 [build-system]
@@ -31,6 +43,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.rye]
+python = "3.11.9"
 managed = true
 universal = true
 dev-dependencies = [
@@ -41,7 +54,7 @@ dev-dependencies = [
     "flake8>=7.1.1",
     "flake8-black>=0.3.6",
     "pytest-asyncio>=0.23.8",
-    "pytest>=8.3.2",
+    "pytest>=8.3.3",
     "pytest-xdist>=3.6.1",
     "pytest-cov>=5.0.0",
 ]
