chore: Update build-and-deploy workflow to use new ECR repository name

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -2,17 +2,15 @@ name: Deploy to Amazon ECS
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ main ]
 
 env:
-  AWS_REGION: eu-west-1                 # set this to your preferred AWS region, e.g. us-west-1
-  ECR_REPOSITORY: c2l8c5w6/megaparse   # set this to your Amazon ECR repository name
-  ECS_SERVICE: megaparse-service                # set this to your Amazon ECS service name
-  ECS_CLUSTER: megaparse                 # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: .aws/task_definition.json # set this to the path to your Amazon ECS task definition
-                                               # file, e.g. .aws/task-definition.json
-  CONTAINER_NAME: megaparse           # set this to the name of the container in the
-                                               # containerDefinitions section of your task definition
+  AWS_REGION: eu-west-1
+  ECR_REPOSITORY: quivrhq/megaparse
+  ECS_SERVICE: megaparse-service
+  ECS_CLUSTER: megaparse
+  ECS_TASK_DEFINITION: .aws/task_definition.json
+  CONTAINER_NAME: megaparse
 
 permissions:
   contents: read
@@ -48,11 +46,14 @@ jobs:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         IMAGE_TAG: ${{ github.sha }}
       run: |
-        # Build a docker container and
-        # push it to ECR so that it can
-        # be deployed to ECS.
+        # Build a docker container and push it to ECR
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+        
+        # Tag the image as 'latest' and push
+        docker tag $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:latest
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
+        
         echo "imageoutput=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
 
   deploy-ecs:
