fix: fix unstructured version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ all = [
     "playwright>=1.47.0",
     "langchain-anthropic>=0.2.3",
     "python-magic>=0.4.27",
-    "unstructured[all-docs]>=0.15.0",
+    "unstructured[all-docs]==0.15.0",
     "langchain>=0.2.0",
     "langchain-community>=0.2.0",
     "langchain-openai>=0.1.0",
