chore: adding uvloop dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ requires-python = ">= 3.11"
 
 dependencies = [
     "python-dotenv>=1.0.0",
+    "uvloop>=0.21.0",
 ]
 
 [project.optional-dependencies]
