--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ venv
 */cdp/*
 *.pkl
 
+
 !megaparse/tests/output_tests/MegaFake_report.md
 *.DS_Store
 .tool-versions
+megaparse/sdk/examples/only_pdfs/
