--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,7 @@ all = [
     "langchain-openai>=0.1.21",
     "langchain-core>=0.2.38",
     "llama-parse>=0.4.0",
-    "uvicorn>=0.25.0"",
+    "uvicorn>=0.25.0",
     "fastapi>=0.115.2",
     "ratelimit>=2.2.1",
     "requests>=2.32.3",
