--- a/libs/megaparse/pyproject.toml
+++ b/libs/megaparse/pyproject.toml
@@ -13,7 +13,7 @@ readme = "README.md"
 requires-python = ">= 3.11"
 
 dependencies = [
-    "megaparse-schema",
+    "megaparse-sdk",
     "pycryptodome>=3.21.0",
     "llama-index>=0.10.0",
     "pdfplumber>=0.11.0",
@@ -41,7 +41,6 @@ api = [
     "fastapi>=0.115.2",
     "ratelimit>=2.2.1",
     "nats-py>=2.9.0",
-    "loguru>=0.7.2",
 ]
 
 
