--- a/release-please-config.json
+++ b/release-please-config.json
@@ -5,15 +5,13 @@
   "bump-patch-for-minor-pre-major": true,
   "include-component-in-tag": true,
   "packages": {
-    "megaparse": {
+    "megaparse/libs/megaparse": {
       "release-type": "python",
-      "path": "libs/megaparse",
       "package-name": "megaparse",
       "changelog-notes-type": "github"
     },
-    "megaparse-sdk": {
+    "megaparse/libs/megaparse-sdk": {
       "release-type": "python",
-      "path": "libs/megaparse_sdk",
       "package-name": "megaparse-sdk",
       "changelog-notes-type": "github"
     }
