--- a/release-please-config.json
+++ b/release-please-config.json
@@ -5,12 +5,12 @@
   "bump-patch-for-minor-pre-major": true,
   "include-component-in-tag": true,
   "packages": {
-    "megaparse/libs/megaparse": {
+    "libs/megaparse": {
       "release-type": "python",
       "package-name": "megaparse",
       "changelog-notes-type": "github"
     },
-    "megaparse/libs/megaparse_sdk": {
+    "libs/megaparse_sdk": {
       "release-type": "python",
       "package-name": "megaparse-sdk",
       "changelog-notes-type": "github"
