--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -10,6 +10,7 @@ env:
 jobs:
   test:
     name: Run tests
+    runs-on: ubuntu-latest
     steps:
       - name: 👀 Checkout code
         uses: actions/checkout@v2
