--- a/libs/megaparse/pyproject.toml
+++ b/libs/megaparse/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "langchain-openai>=0.1.21",
     "langchain-core>=0.2.38",
     "llama-parse>=0.4.0",
+    "pydantic-settings>=2.6.1",
 ]
 
 [project.optional-dependencies]
