fix: auto strategy

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,10 @@ authors = [
 ]
 readme = "README.md"
 requires-python = ">= 3.11"
-dependencies = ["packaging>=22.0"]
+dependencies = [
+    "packaging>=22.0",
+    "pypdfium2>=4.30.0",
+]
 
 [build-system]
 requires = ["hatchling"]
