--- a/libs/megaparse/pyproject.toml
+++ b/libs/megaparse/pyproject.toml
@@ -29,6 +29,8 @@ dependencies = [
     "langchain-core>=0.2.38",
     "llama-parse>=0.4.0",
     "pydantic-settings>=2.6.1",
+    "onnxtr[cpu]>=0.6.0 ; platform_machine !='x86_64'",
+    "onnxtr[gpu-headless]>=0.6.0 ;  platform_machine == 'x86_64'",
 ]
 
 [project.optional-dependencies]
@@ -39,7 +41,7 @@ api = [
     "uvicorn>=0.32.0",
     "fastapi>=0.115.2",
     "ratelimit>=2.2.1",
-    "nats-py>=2.9.0",
+
 ]
 
 
