feat: custom auto (#131)
* add: custom auto

* fix: add file extension

* fix: switch to pdfminer.six

* fix: gitignore

* add : dist

* feat: refacto megaparse for service (#132)

* full refacto wip

* moved schema to sdk and client

* fix ruff

* sssl in config

* wip

* fix config param

* fix CI + docker

---------

Co-authored-by: aminediro <aminedirhoussi@gmail.com>

* chore(main): release megaparse 0.0.46 (#133)

* feat: release plz (#134)

* full refacto wip

* moved schema to sdk and client

* fix ruff

* sssl in config

* wip

* fix config param

* fix CI + docker

* version megaparse

* fix settings env

* docker fix

* fix manifest

---------

Co-authored-by: aminediro <aminedirhoussi@gmail.com>

* feat: release plz (#136)

* full refacto wip

* moved schema to sdk and client

* fix ruff

* sssl in config

* wip

* fix config param

* fix CI + docker

* version megaparse

* fix settings env

* docker fix

* fix manifest

* release confgi

* release confg

---------

Co-authored-by: aminediro <aminedirhoussi@gmail.com>

* feat: release plz (#138)

* full refacto wip

* moved schema to sdk and client

* fix ruff

* sssl in config

* wip

* fix config param

* fix CI + docker

* version megaparse

* fix settings env

* docker fix

* fix manifest

* release confgi

* release confg

* release plzzzz

---------

Co-authored-by: aminediro <aminedirhoussi@gmail.com>

* feat: broker megaparse (#139)

* full refacto wip

* moved schema to sdk and client

* fix ruff

* sssl in config

* wip

* fix config param

* fix CI + docker

* version megaparse

* fix settings env

* docker fix

* fix manifest

* release confgi

* release confg

* release plzzzz

* release plz

---------

Co-authored-by: aminediro <aminedirhoussi@gmail.com>

* feat: broker megaparse (#140)

* full refacto wip

* moved schema to sd

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,9 @@ authors = [
 ]
 readme = "README.md"
 requires-python = ">= 3.11"
-dependencies = ["packaging>=22.0"]
+dependencies = [
+    "packaging>=22.0",
+]
 
 [build-system]
 requires = ["hatchling"]
