--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -2,6 +2,8 @@ FROM nvidia/cuda:12.6.3-cudnn-devel-ubuntu20.04
 
 WORKDIR /app
 
+ENV DEBIAN_FRONTEND=noninteractive
+
 # Install runtime dependencies
 RUN apt-get update && apt-get upgrade && apt-get install -y \
     libgeos-dev \
