--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -2,6 +2,7 @@ FROM nvidia/cuda:12.6.3-cudnn-devel-ubuntu20.04
 
 WORKDIR /app
 
+ENV UV_COMPILE_BYTECODE=1
 ENV DEBIAN_FRONTEND=noninteractive
 
 # Install runtime dependencies
@@ -17,6 +18,7 @@ RUN apt-get update && apt-get upgrade && apt-get install -y \
     build-essential \
     libtool \
     python-dev \
+    python3-pip \
     build-essential \
     wget \
     gcc \
