--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -36,6 +36,7 @@ COPY libs/megaparse/pyproject.toml libs/megaparse/README.md libs/megaparse/
 COPY libs/megaparse_sdk/pyproject.toml libs/megaparse_sdk/README.md libs/megaparse_sdk/
 
 RUN pip install uv
+RUN uv python install 3.11 && uv python pin 3.11
 RUN uv pip install --no-cache --system -r requirements.lock
 
 RUN playwright install --with-deps && \
